<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_title">About</string>
    <string name="access_sd_fail">"Couldn't access SD card"</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="action_search">Search</string>
    <string name="address">Address:</string>
    <string name="agree_btn">Agree</string>
    <string name="amazon_assistant_shopping_title">Search on Amazon</string>
    <string name="app_description_content">Scanner allows you to scan QR codes, documents, business cards, and more. Make sure you can do without these features before you uninstall the app.</string>
    <string name="app_description_title">About Scanner</string>
    <string name="app_details">App:</string>
    <string name="app_name">AnX Scanner</string>
    <string name="back">Back</string>
    <string name="barcode_into_rectangle">Place the code inside the frame</string>
    <string name="birthday">Birthday:</string>
    <string name="blog">Weibo</string>
    <string name="business_card">Business card</string>
    <string name="business_card_result_title">Business card</string>
    <string name="business_card_title">Place the business card inside the frame</string>
    <string name="business_copy">Copy</string>
    <string name="business_new_contacts">Create contact</string>
    <string name="business_no_result">"Couldn't recognize business card. Try again."</string>
    <string name="calender">Calendar</string>
    <string name="call_anyone">Call</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cancel">Cancel</string>
    <string name="choose_pay_title">Select payment method</string>
    <string name="choose_picture">Select QR code image</string>
    <string name="common_retake_picture">Retake</string>
    <string name="common_retry">Try again</string>
    <string name="common_save">Save</string>
    <string name="company">Company:</string>
    <string name="confirm">OK</string>
    <string name="connect_wifi">Connect to this network</string>
    <string name="contact_details">QR code contact:</string>
    <string name="continue_access_web_url">Go to website</string>
    <string name="continue_to_website">Go to website</string>
    <string name="copy_text">Copy text</string>
    <string name="copy_text_success">Text copied</string>
    <string name="crop_cancel_description">Cancel</string>
    <string name="crop_done_description">Done</string>
    <string name="crop_title_study">Crop the photo</string>
    <string name="crop_title_translation">Select text to translate</string>
    <string name="document_color_picture">Color</string>
    <string name="document_color_picture_tip">Converting to color…</string>
    <string name="document_crop_title">Crop document</string>
    <string name="document_grayscale">Grayscale</string>
    <string name="document_grayscale_tip_msg">Converting to grayscale…</string>
    <string name="document_ocr">OCR</string>
    <string name="document_ocr_result_copy">Copy text</string>
    <string name="document_ocr_result_save">Save to Notes</string>
    <string name="document_ocr_result_title">Document photo</string>
    <string name="document_ocr_tip_msg">Reading…</string>
    <string name="document_recognize_fail_tip">"Couldn't read document"</string>
    <string name="document_recognize_null_tip">"Couldn't recognize document"</string>
    <string name="document_rectify">Adjust</string>
    <string name="document_rectify_tip_msg">Adjusting…</string>
    <string name="document_save_succeed_tip">Document saved to %1$s</string>
    <string name="document_title">Take a photo of the document</string>
    <string name="document_top_panel_title">Document photo</string>
    <string name="done">Done</string>
    <string name="drag_barcode_into_frame">Drag the frame to fit the code</string>
    <string name="drag_crop_to_business_card">Move to crop</string>
    <string name="email">Email:</string>
    <string name="error_camera_disabled">Access to Camera has been denied due to security reasons</string>
    <string name="error_cannot_connect_camera">"Can't connect to Camera"</string>
    <string name="error_empty_result">"Couldn't find results"</string>
    <string name="error_get_image">"Couldn't get image"</string>
    <string name="error_media_storage_failure">"Couldn't save photo"</string>
    <string name="error_permissions">"Scanner doesn't have the permissions required for it to work normally. Go to Settings and check permissions to continue."</string>
    <string name="error_server_error">A server error occurred.</string>
    <string name="fax">Fax</string>
    <string name="feed_search_fail">No results, try again</string>
    <string name="feedback_description_camera_access">"Scanner can't connect to Camera"</string>
    <string name="feedback_description_save_photo">"Couldn't save photo or video"</string>
    <string name="got_it">Got it</string>
    <string name="gps">Navigate</string>
    <string name="import_contact">Import contact</string>
    <string name="impunity_declaration_content">"Scanner needs to use your camera and process the images you take while using the app. Don't use Scanner to take photos of the objects containing your personal information. By tapping \"Agree\", you're agreeing to our &lt;font color=\"#ff32b4ff\">&lt;a href=\"http://www.miui.com/res/doc/privacy.html?region=%1$s&amp;lang=%2$s\" style=\"color:#ff32b4ff;\">Privacy Policy&lt;/a>&lt;/font> and allow Scanner to connect to the internet."</string>
    <string name="impunity_declaration_negative_text">Exit</string>
    <string name="impunity_declaration_title">Privacy Policy</string>
    <string name="label_choose_picture">Choose picture</string>
    <string name="label_flash_light">Flash light</string>
    <string name="language_entry_chinese_cn">Simplified Chinese</string>
    <string name="language_entry_english">English</string>
    <string name="language_entry_french">French</string>
    <string name="language_entry_german">German</string>
    <string name="language_entry_japanese">Japanese</string>
    <string name="language_entry_korean">Korean</string>
    <string name="language_entry_spanish">Spanish</string>
    <string name="low_version_tip">Update MIUI to its latest version to be able to use Scanner.</string>
    <string name="miracast_connect">Cast</string>
    <string name="miracast_connect_fail">"Couldn't cast, try again"</string>
    <string name="miracast_connecting">Casting…</string>
    <string name="miracast_details">Scan QR code to cast</string>
    <string name="miracast_message">Cast to %s?</string>
    <string name="miracast_switch_off">Wireless display is off</string>
    <string name="miracast_switch_tip">Turn on wireless display to use this feature</string>
    <string name="module_title_business_card">Business card</string>
    <string name="module_title_code">QR code</string>
    <string name="module_title_document">Document</string>
    <string name="module_title_plant">Plant</string>
    <string name="module_title_shopping">Shopping</string>
    <string name="module_title_study">Homework</string>
    <string name="module_title_translation">Translate</string>
    <string name="name">Name:</string>
    <string name="new_schedule">Create event</string>
    <string name="nickname">Nickname:</string>
    <string name="no_network">"Can't connect to the network"</string>
    <string name="no_storage">No internal storage</string>
    <string name="no_support_to_translate_type">"This language isn't supported"</string>
    <string name="not_insert_contact">"Can't add contact"</string>
    <string name="not_recommend_access_web_url">Go anyway</string>
    <string name="note">Remark:</string>
    <string name="open_url">Open URL</string>
    <string name="pay_no_tip">"Don't show again"</string>
    <string name="pay_save_this_choose">Remember my choice</string>
    <string name="payment_text">Open with %s</string>
    <string name="phone">Phone:</string>
    <string name="place_barcode_into_rectangle">Place the code inside the frame</string>
    <string name="plant_fail">"Couldn't recognize"</string>
    <string name="plant_loading">Identifying…</string>
    <string name="plant_reg_fail_2">"Couldn't recognize this object. Scanner can only identify plants."</string>
    <string name="plant_support">" (Technical support)"</string>
    <string name="plant_title">Scan the plant you want to identify</string>
    <string name="preparing_sd">Preparing internal storage…</string>
    <string name="previous">Back</string>
    <string name="qr_code_details">QR code details:</string>
    <string name="recognize">Scan</string>
    <string name="recognize_fail">"Couldn't read code"</string>
    <string name="scan_result">Result</string>
    <string name="scan_support_type">WeChat, Alipay, QR codes, barcodes</string>
    <string name="sdk_not_ready">Preparing SDK. Try again later.</string>
    <string name="secure_access_web_url">Go to website</string>
    <string name="see_app_details">View app details</string>
    <string name="select_dialog_confirm">OK</string>
    <string name="send_mail">Send email</string>
    <string name="setting_alipay">Alipay</string>
    <string name="setting_choose_every_time">Always ask</string>
    <string name="setting_default_function">Default feature</string>
    <string name="setting_preference_pay">Preferred payment method</string>
    <string name="setting_title">Settings</string>
    <string name="setting_use_last_choose">Remember previous choice</string>
    <string name="setting_wechat">WeChat</string>
    <string name="shopping_searching">Searching…</string>
    <string name="shopping_title">Take a photo of the product</string>
    <string name="shopping_vendor_info">Powered by Taobao</string>
    <string name="spaceIsLow_content">Not enough space on internal storage. Free up some space.</string>
    <string name="study_rotate_picture">Processing image…</string>
    <string name="to_pay">Complete payment</string>
    <string name="translate_dest_lang">Target language</string>
    <string name="translate_src_lang">Source language</string>
    <string name="translate_text_compare">Comparison</string>
    <string name="translate_text_compare_copy">Copy</string>
    <string name="translate_text_compare_save">Save</string>
    <string name="com_alibc_auth_actiivty_auth_ok">确认授权</string>
    <string name="com_alibc_auth_actiivty_cancel">取消</string>
    <string name="com_alibc_auth_actiivty_get">获取</string>
</resources>