<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="@color/black_60_transparent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="52.76999dip" android:text="@string/choose_pay_title" />
    <View android:background="@color/black_15_transparent" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/alipay_checked_status" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/select_pay_type_status" />
        <CheckedTextView android:textSize="14.0sp" android:textColor="@color/choose_pay_item_color" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/alipay" android:paddingLeft="41.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/setting_alipay" android:singleLine="true" android:drawableLeft="@drawable/alipay_logo" android:drawablePadding="5.669983dip" />
    </FrameLayout>
    <View android:background="@color/black_15_transparent" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/wechat_selected_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/select_pay_type_status" />
        <CheckedTextView android:textSize="14.0sp" android:textColor="@color/choose_pay_item_color" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/wechat" android:paddingLeft="41.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:checked="true" android:text="@string/setting_wechat" android:singleLine="true" android:drawableLeft="@drawable/wechat_logo" android:drawablePadding="5.669983dip" />
    </FrameLayout>
    <View android:background="@color/black_15_transparent" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <CheckBox android:gravity="center_vertical" android:id="@id/save_pay_type" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="7.0dip" android:text="@string/pay_save_this_choose" android:drawablePadding="5.669983dip" />
    <View android:background="@color/black_15_transparent" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:gravity="center" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:background="@color/black_15_transparent" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <TextView android:textSize="14.0sp" android:textColor="@color/colorGridItemPressed" android:gravity="center" android:id="@id/to_pay" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/to_pay" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>