<?xml version="1.0" encoding="utf-8"?>
<com.xiaomi.scanner.ui.ProcessDocumentLayout android:orientation="vertical" android:id="@id/document_process_layout" android:background="@color/black" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/document_process_title" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="@dimen/document_top_panel_height" android:text="@string/document_top_panel_title" android:layout_alignParentTop="true" />
    <FrameLayout android:background="@color/color_1a1a1a" android:paddingTop="@dimen/document_pic_panel_padding_top" android:paddingBottom="@dimen/document_pic_panel_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/document_action_panel" android:layout_below="@id/document_process_title">
        <ImageView android:layout_gravity="center" android:id="@id/document_rectified_image" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerInside" android:layout_marginStart="@dimen/document_pic_margin" android:layout_marginEnd="@dimen/document_pic_margin" />
    </FrameLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/document_action_panel" android:layout_width="fill_parent" android:layout_height="@dimen/document_action_panel_height" android:layout_above="@id/document_seperate_line">
        <TextView android:id="@id/document_rectify" android:text="@string/document_rectify" android:drawableTop="@drawable/ic_document_rectify" style="@style/DocumentTextStyle" />
        <TextView android:id="@id/document_gray_pic" android:text="@string/document_grayscale" android:drawableTop="@drawable/ic_document_grayscale" android:layout_marginStart="@dimen/document_action_panel_icon_margin" android:layout_marginEnd="@dimen/document_action_panel_icon_margin" style="@style/DocumentTextStyle" />
        <TextView android:id="@id/document_ocr" android:text="@string/document_ocr" android:drawableTop="@drawable/ic_document_ocr" style="@style/DocumentTextStyle" />
    </LinearLayout>
    <View android:id="@id/document_seperate_line" android:background="@color/seperate_line_color" android:layout_width="fill_parent" android:layout_height="@dimen/separate_line_width" android:layout_above="@id/document_bottom_panel" />
    <FrameLayout android:id="@id/document_bottom_panel" android:background="@color/options_background" android:layout_width="fill_parent" android:layout_height="@dimen/document_bottom_panel_height" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="start|center" android:id="@id/document_retake_picture" android:padding="@dimen/touch_expend_size" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_cancel" android:contentDescription="@string/common_retake_picture" android:layout_marginStart="@dimen/size_40" />
        <ImageView android:layout_gravity="end|center" android:id="@id/document_save" android:padding="@dimen/touch_expend_size" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_confirm" android:contentDescription="@string/common_save" android:layout_marginEnd="@dimen/size_40" />
    </FrameLayout>
</com.xiaomi.scanner.ui.ProcessDocumentLayout>