<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/root" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:background="@drawable/white_20_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#ff9b9b9b" android:gravity="center" android:id="@id/ocr_data" android:padding="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <View android:background="#ffc2c2c2" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_extra_action" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="#ff4a4a4a" android:gravity="center" android:id="@id/ocr_extra_action" android:padding="15.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/business_new_contacts" />
            <View android:background="#ffc2c2c2" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="#ff4a4a4a" android:gravity="center" android:id="@id/ocr_action" android:padding="15.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <View android:background="#ffc2c2c2" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="14.0sp" android:textColor="#ff4a4a4a" android:gravity="center" android:id="@id/ocr_dialog_copy" android:padding="15.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/business_copy" />
        <View android:background="#ffc2c2c2" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="14.0sp" android:textColor="#ff4a4a4a" android:gravity="center" android:id="@id/ocr_dialog_cancel" android:padding="15.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</FrameLayout>