<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bg_33dp_black" android:layout_width="fill_parent" android:layout_height="318.0dip" android:layout_margin="9.329987dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.xiaomi.scanner.ui.WheelPicker android:id="@id/src_lang_wheel" android:background="@color/black" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_marginBottom="40.0dip" android:layout_weight="1.0" app:wheel_data="@array/WheelSrcLang" app:wheel_item_text_size="13.0sp" app:wheel_item_min_text_size="10.669983sp" app:wheel_item_text_color="@color/white" app:wheel_selected_item_text_color="@color/white" app:wheel_cyclic="false" app:wheel_item_same_size="true" app:wheel_atmospheric="true" app:wheel_curved="false" app:wheel_item_align="right" />
            <com.xiaomi.scanner.ui.WheelPicker android:id="@id/des_lang_wheel" android:background="@color/black" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_marginBottom="40.0dip" android:layout_weight="1.0" app:wheel_data="@array/WheelArrayLang" app:wheel_item_text_size="13.0sp" app:wheel_item_min_text_size="10.669983sp" app:wheel_item_text_color="@color/white" app:wheel_selected_item_text_color="@color/white" app:wheel_cyclic="false" app:wheel_item_same_size="true" app:wheel_atmospheric="true" app:wheel_curved="false" app:wheel_item_align="left" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/white_65_transparent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/translate_src_lang" android:layout_weight="1.0" />
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_right_arrow_normal" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white_65_transparent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/translate_dest_lang" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/white_65_transparent" android:gravity="center" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
            <TextView android:textSize="14.0sp" android:textColor="@color/colorGridItemPressed" android:gravity="center" android:id="@id/confirm" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/select_dialog_confirm" android:layout_weight="1.0" />
        </LinearLayout>
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_right_arrow_normal" />
    </FrameLayout>
</FrameLayout>