<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/open_auth_rl" android:background="@drawable/com_alibaba_bc_auth_ll_bg" android:paddingLeft="25.0dip" android:visibility="gone" android:layout_width="230.0dip" android:layout_height="wrap_content" android:minHeight="120.0dip" android:layout_centerInParent="true">
        <Button android:id="@id/open_auth_btn_close" android:background="@drawable/com_alibc_trade_auth_close" android:padding="3.0dip" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="11.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/open_auth_title" android:layout_width="180.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/com_alibc_auth_actiivty_get" android:layout_alignParentTop="true" />
        <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:id="@id/open_auth_desc" android:layout_width="180.0dip" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="" android:layout_below="@id/open_auth_title" />
        <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/open_auth_btn_grant" android:background="@drawable/com_alibaba_bc_auth_success_btn" android:layout_width="80.0dip" android:layout_height="28.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:text="@string/com_alibc_auth_actiivty_auth_ok" android:layout_weight="1.0" android:layout_below="@id/open_auth_desc" />
        <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/open_auth_btn_cancel" android:background="@drawable/com_alibaba_bc_auth_cancle_btn" android:layout_width="80.0dip" android:layout_height="28.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:text="@string/com_alibc_auth_actiivty_cancel" android:layout_toRightOf="@id/open_auth_btn_grant" android:layout_below="@id/open_auth_desc" />
    </RelativeLayout>
    <ProgressBar android:id="@id/com_alibc_auth_progressbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>